[tool.poetry]
name = "nonebot-plugin-df-daily"
version = "0.1.0"
description = "《三角洲行动》信息查询/推送"
authors = ["abRoy <abroyo@outlook.com>"]

repository = "https://github.com/ab-Royo/nonebot-plugin-DF-Daily"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.1.3"
nonebot-plugin-htmlrender = "^0.3.0"
httpx = "^0.27.0"
nonebot-adapter-onebot = "^2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
